# Training_Algorithm

Algorithm/: Ngay_1.cpp  Ngay_10.cpp  Ngay_12.cpp  Ngay_2.cpp  Ngay_22.cpp  Ngay_23.cpp  Ngay_4.cpp  Ngay_5.cpp  Ngay_6.cpp  Ngay_7.cpp  Ngay_9.cpp  canhcau.cpp  dinhtru.cpp  kruskal.cpp  prim.cpp  teskosaraju.cpp  testprim.cpp  testrungto.cpp
Algorithm/#792 div1 div2/: A.cpp
Algorithm/#799 div4/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
Algorithm/#804 div4/: A.cpp  B.cpp  C.cpp  E.cpp  F.cpp  testF.cpp
Algorithm/#805 div3/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  op.txt  tes.cpp
Algorithm/LQDOJ/: op.txt  (+8 more)
Algorithm/Quy hoach dong/: CMakeLists.txt  bai_10_TongKhongLienKe.cpp  bai_11_XauConChungDaiNhat3Xau.cpp  bai_12_TongMaxCuaDayConTangDan.cpp  bai_12_TongMaxCuaDayConTangDan_C2.cpp  bai_13_DayBitonic.cpp  bai_14_XucXac.cpp  bai_15_CoinProblem.cpp  bai_16_Coin2.cpp  bai_17_Coin3.cpp  bai_18_MaximumPathSum.cpp  bai_19_DemSoDuongDiTrongMeCung.cpp  bai_20_MaximumSquareSPOJ.cpp  bai_21_DistinctSum.cpp  bai_22_SumSubstring.cpp  bai_22_SumSubstring_c2.cpp  bai_23_XauConDoiXungDaiNhat.cpp  bai_24_TongBinhPhuong.cpp  bai_24_TongBinhPhuong_c2.cpp  bai_25_BienDoiXau.cpp  bai_25_BienDoiXau_c2.cpp  bai_26_LIS2.cpp  bai_27_XoaChuSo.cpp  bai_27_XoaChuSo_c2.cpp  bai_27_XoaChuSo_tes.cpp  bai_28_SelectArray.cpp  bai_29_EqualSet.cpp  bai_2_DayConTangDaiNhat.cpp  bai_31_Scheduling.cpp  bai_33_LatGach.cpp  bai_35_OddEven.cpp  bai_3_SoBuocItNhat.cpp  bai_4_DayConCoTongBangS.cpp  bai_5_Staircase.cpp  bai_6_FrogSPOJ.cpp  bai_7_XemPhimSPOJ.cpp  bai_8_BaiToanCaiTui.cpp  bai_9_SoNguyenMax.cpp
(+430 files in other folders)
