cmake_minimum_required(VERSION 3.22)
project(Quy_hoach_dong)

set(CMAKE_CXX_STANDARD 14)

add_executable(Quy_hoach_dong
#        bai_1_XauConChungDaiNhat.cpp
#        bai_2_DayConTangDaiNhat.cpp
#        bai_3_SoBuocItNhat.cpp
#        bai_4_DayConCoTongBangS.cpp
#        bai_5_Staircase.cpp
#        bai_6_FrogSPOJ.cpp
#        bai_7_XemPhimSPOJ.cpp
#        bai_8_BaiToanCaiTui.cpp
#        bai_9_SoNguyenMax.cpp
#        bai_10_TongKhongLienKe.cpp
#        bai_11_XauConChungDaiNhat3Xau.cpp
#        bai_12_TongMaxCuaDayConTangDan.cpp
#        bai_12_TongMaxCuaDayConTangDan_C2.cpp
#        bai_13_DayBitonic.cpp
#        bai_14_XucXac.cpp
#        bai_15_CoinProblem.cpp
#        bai_16_Coin2.cpp
#        bai_17_Coin3.cpp
#        bai_18_MaximumPathSum.cpp
#        bai_19_DemSoDuongDiTrongMeCung.cpp
#        bai_20_MaximumSquareSPOJ.cpp
#        bai_21_DistinctSum.cpp
#        bai_22_SumSubstring.cpp
#        bai_23_XauConDoiXungDaiNhat.cpp
#        bai_24_TongBinhPhuong.cpp
#        bai_26_LIS2.cpp
#        bai_27_XoaChuSo.cpp
#        bai_28_SelectArray.cpp
#        bai_29_EqualSet.cpp
#        bai_31_Scheduling.cpp
#        bai_33_LatGach.cpp
        bai_35_OddEven.cpp
        )
